Fix root route and add session secret

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -41,8 +41,9 @@
             id="image" 
             placeholder="Enter image URL/Link" 
             name="listing[image]" 
-            class="form-control" />
-            required
+            class="form-control"
+            required />
+            
         </div>
         <div class="mb-3 col-md-4">
         <label for="category" class="form-label">Category</label>
