--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -44,7 +44,7 @@
                 <option value="Mountains" <%= listing.category === 'Mountains' ? 'selected' : '' %>>Mountains</option>
                 <option value="Castles" <%= listing.category === 'Castles' ? 'selected' : '' %>>Castles</option>
                 <option value="Amazing Pools" <%= listing.category === 'Amazing Pools' ? 'selected' : '' %>>Amazing Pools</option>
-                <option value="Camping" <%= listing.category === 'Camping' ? 'selected' : '' %>>Camping</option>>
+                <option value="Camping" <%= listing.category === 'Camping' ? 'selected' : '' %>>Camping</option>
                 <option value="Boats" <%= listing.category === 'Boats' ? 'selected' : '' %>>Boats</option>
             </select>
         </div>
